[package]
name = "egui_vulkano"
version = "0.8.0"
authors = ["derivator <derivator@users.noreply.github.com>", "Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
description = "Vulkano graphics backend for egui"
homepage = "https://github.com/derivator/egui_vulkano"
repository = "https://github.com/derivator/egui_vulkano"
keywords = ["egui", "vulkano", "vulkan"]
categories = ["gui", "game-development"]
edition = "2021"

[dependencies]
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano.git" }
bytemuck = "1.8.0"
egui = "0.22.0"
thiserror = "1.0"

[dev-dependencies]
winit = "*"
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano.git" }
egui-winit = "*"
egui_demo_lib = "*"
